fix: connect feature to real-time data

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=BAHA
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:DBKQ8eEJgQpZgBcyB4Ak8fWvlPY3RpatgFlyeiXa3E4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+
+OPENWEATHER_API_KEY=cd09ec564d0345a5582eed67272367ce
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
