--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,11 @@ jobs:
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.HOSTINGER_IP }}
-          username: ${{ secrets.HOSTINGER_USER }} 
-          key: ${{ secrets.HOSTINGER_SSH_KEY }} 
+          username: ${{ secrets.HOSTINGER_USER }}
+          key: ${{ secrets.HOSTINGER_SSH_KEY }}
           port: 65002
           script: |
-            cd domains/yourdomain.com/laravel-app
+            cd domains/baha-tgc.online/baha-feature
             git pull origin main
             composer install --no-dev
             php artisan migrate --force
