--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,15 @@ jobs:
           username: ${{ secrets.HOSTINGER_USER }}
           key: ${{ secrets.HOSTINGER_SSH_KEY }}
           port: 65002
-          script: |
+          script:
+            set -e
+
             cd domains/baha-tgc.online/baha-feature
-            git pull origin main
+            git fetch origin main
+            git reset --hard origin/main
             composer install --no-dev
             php artisan migrate --force
             php artisan optimize:clear
+            php artisan config:cache
+            php artisan route:cache
+            php artisan view:cache
